syntax = "proto3";

package cryptowatch;

option go_package = "pkg/api/cryptowatchv1";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

service Portfolios {
  rpc CreatePortfolio(CreatePortfolioReq) returns(google.protobuf.UInt64Value);
  rpc Buy(BuySellReq) returns(google.protobuf.Empty);
  rpc Sell(BuySellReq) returns(google.protobuf.Empty);
  rpc Info(InfoReq) returns (InfoRes);
}
message CreatePortfolioReq {
  uint64 user_id = 1;
  string name = 2;
}

message BuySellReq {
  uint64 user_id = 1;
  uint64 portfolio_id = 2;
  string ticker = 3;
  double quantity = 4;
  double price = 5;
  double fee = 6;
}

message InfoReq {
  uint64 user_id = 1;
  uint64 portfolio_id = 2;
}

message InfoRes {
  double profit = 1;
}